--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Hakaton</string>
+    <string name="title_news_text_textview">Ежегодный областной творческий конкурс</string>
+    <string name="request_text_button">Прием заявок</string>
+    <string name="discription">Описание</string>
+    <string name="input">Войти</string>
+    <string name="registration">Регистрация</string>
 </resources>
