--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="input">Войти</string>
     <string name="registration">Регистрация</string>
     <string name="submit_application">Оставить заявку</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="rating">Рейтинг</string>
+    <string name="delete_request">Удалить заявку</string>
 </resources>
